# server/openapi.yaml
@@ -88,7 +88,7 @@ paths:
       summary: Register agent
       requestBody:
         content:
-          application/json:
+          multipart/form-data:
             schema:
               $ref: '#/components/schemas/AgentRequest'
       responses:
@@ -118,12 +118,36 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/AgentRequest'
+                  $ref: '#/components/schemas/AgentResponse'
 
 components:
   schemas:
     AgentRequest:
       title: Agent information
+      type: object
+      properties:
+        ca_crt:
+          type: array
+          items:
+            type: string
+            format: binary
+        client_crt:
+          type: array
+          items:
+            type: string
+            format: binary
+        client_key:
+          type: array
+          items:
+            type: string
+            format: binary
+      required:
+        - ca_crt
+        - client_crt
+        - client_key
+
+    AgentResponse:
+      title: Agent response
       type: object
       properties:
         customer_id:
@@ -167,6 +191,8 @@ components:
       title: Deploy operation request payload
       type: object
       properties:
+        customer_id:
+          type: string
         operation:
           type: string
         payload:
@@ -175,11 +201,14 @@ components:
       required:
         - operation
         - payload
+        - customer_id
 
     ConfigRequestPayload:
       title: Configure payload
       type: object
       properties:
+        customer_id:
+          type: string
         operation:
           type: string
         payload:
@@ -194,3 +223,4 @@ components:
       required:
         - operation
         - payload
+        - customer_id
