# server/pkg/handler/handle_climon.go
@@ -3,6 +3,8 @@ package handler
 import (
 	"context"
 	"encoding/json"
+	"errors"
+	"fmt"
 	"net/http"
 	"time"
 
@@ -12,26 +14,31 @@ import (
 	"google.golang.org/protobuf/types/known/anypb"
 )
 
-func (s *APIHanlder) PostClimon(c *gin.Context) {
+func (a *APIHandler) PostClimon(c *gin.Context) {
 	//TODO get address from database based on CustomerInfo
-	s.log.Infof("deploy api invocation started")
+	a.log.Infof("deploy api invocation started")
 
 	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Minute)
 	defer cancel()
 
 	var req api.DeployRequestPayload
 	if err := c.BindJSON(&req); err != nil {
-		s.sendResponse(c, "Failed to parse deploy payload", err)
+		a.setFailedResponse(c, "failed to parse deploy payload", err)
 		return
 	}
 
 	payload, err := json.Marshal(req.Payload)
 	if err != nil {
-		s.sendResponse(c, "Deploy request prepration failed", err)
+		a.setFailedResponse(c, "deploy request preparation failed", err)
 		return
 	}
 
-	response, err := s.client.SubmitJob(
+	agent := a.GetClient(req.CustomerId)
+	if agent == nil {
+		a.setFailedResponse(c, fmt.Sprintf("unregistered customer %v", req.CustomerId), errors.New(""))
+	}
+
+	response, err := agent.SubmitJob(
 		ctx,
 		&agentpb.JobRequest{
 			Operation: req.Operation,
@@ -39,7 +46,7 @@ func (s *APIHanlder) PostClimon(c *gin.Context) {
 		},
 	)
 	if err != nil {
-		s.sendResponse(c, "failed to submit job", err)
+		a.setFailedResponse(c, "failed to submit job", err)
 		return
 	}
 
@@ -47,6 +54,6 @@ func (s *APIHanlder) PostClimon(c *gin.Context) {
 		Status:  "SUCCESS",
 		Message: toString(response)})
 
-	s.log.Infof("response received", response)
-	s.log.Infof("deploy api invocation finished")
+	a.log.Infof("response received", response)
+	a.log.Infof("deploy api invocation finished")
 }
